third_party/WebKit/Source/core/css/properties/CSSShorthandPropertyAPIGrid.cpp
@@ -46,7 +46,7 @@ bool CSSShorthandPropertyAPIGrid::ParseShorthand(
     const CSSParserLocalContext&,
     HeapVector<CSSProperty, 256>& properties) const {
   DCHECK(RuntimeEnabledFeatures::CSSGridLayoutEnabled());
-  DCHECK_EQ(shorthandForProperty(CSSPropertyGrid).length(), 8u);
+  DCHECK_EQ(shorthandForProperty(CSSPropertyGrid).length(), 6u);
 
   CSSParserTokenRange range_copy = range;
 
@@ -86,14 +86,6 @@ bool CSSShorthandPropertyAPIGrid::ParseShorthand(
         properties);
     CSSPropertyParserHelpers::AddProperty(
         CSSPropertyGridAutoRows, CSSPropertyGrid, *CSSInitialValue::Create(),
-        important, CSSPropertyParserHelpers::IsImplicitProperty::kNotImplicit,
-        properties);
-    CSSPropertyParserHelpers::AddProperty(
-        CSSPropertyGridColumnGap, CSSPropertyGrid, *CSSInitialValue::Create(),
-        important, CSSPropertyParserHelpers::IsImplicitProperty::kNotImplicit,
-        properties);
-    CSSPropertyParserHelpers::AddProperty(
-        CSSPropertyGridRowGap, CSSPropertyGrid, *CSSInitialValue::Create(),
         important, CSSPropertyParserHelpers::IsImplicitProperty::kNotImplicit,
         properties);
     return true;
@@ -181,14 +173,6 @@ bool CSSShorthandPropertyAPIGrid::ParseShorthand(
   CSSPropertyParserHelpers::AddProperty(
       CSSPropertyGridAutoRows, CSSPropertyGrid, *auto_rows_value, important,
       CSSPropertyParserHelpers::IsImplicitProperty::kNotImplicit, properties);
-  CSSPropertyParserHelpers::AddProperty(
-      CSSPropertyGridColumnGap, CSSPropertyGrid, *CSSInitialValue::Create(),
-      important, CSSPropertyParserHelpers::IsImplicitProperty::kNotImplicit,
-      properties);
-  CSSPropertyParserHelpers::AddProperty(
-      CSSPropertyGridRowGap, CSSPropertyGrid, *CSSInitialValue::Create(),
-      important, CSSPropertyParserHelpers::IsImplicitProperty::kNotImplicit,
-      properties);
   return true;
 }
 
